Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,7 +7,7 @@ custom_links:
     url:
 
 client:
-  name: Marjorie Dick Stuart
+  name: 
   license_number:
   about_markdown: |
     Marjorie Dick Stuart’s trademark is doing things a little differently than usual. Whether it’s having a pet lizard or making her own jewelry, she is a unique individual with interests that exemplify her one-of-a-kind take on life. As one of Cleveland Park’s top real estate professionals, Marjorie stays ahead of the pack by handling her clients’ important investments with innovative strategies and creative solutions.
