--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,113 +1,129 @@
 audit_header: false
-title: -- CLIENT BRAND --
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+title: '-- CLIENT BRAND --'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Scott Fuller
-  license_number: BRE#01334119
-  about_markdown: |
-    I'm a full time real estate broker with over 13 years experience in the industry. Consistently ranked in the top 1% for closed sales in the East Bay, we specialize in helping homeowners sell their home for the most money and in the shortest time. My full service team includes dedicated buyers agents, full time marketing experts and more. We use some of the most cutting edge marketing available to help get you top dollar for your home. My background and education in information systems, web programming and technology sets me apart from other real estate professionals.
+  license_number:
+  about_markdown: >
+    I'm a full time real estate broker with over 13 years experience in the
+    industry. Consistently ranked in the top 1% for closed sales in the East
+    Bay, we specialize in helping homeowners sell their home for the most money
+    and in the shortest time. My full service team includes dedicated buyers
+    agents, full time marketing experts and more. We use some of the most
+    cutting edge marketing available to help get you top dollar for your home.
+    My background and education in information systems, web programming and
+    technology sets me apart from other real estate professionals.
   market:
   brand: The Scott Fuller Team
   brokerage: Keller Williams Realty
-  address: 760 Camino Ramon, Ste. 200 Danville, CA 94526
+  address: '760 Camino Ramon, Ste. 200 Danville, CA 94526'
   phone: 925-855-3432
   phone_type:
   phone2:
   phone2_type:
   email: Scott@TheScottFullerTeam.com
-  url: http://TheScottFullerTeam.com
-
+  url: 'http://TheScottFullerTeam.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.youreastbayhousevalue.com/
+  first_CTA_URL: 'http://www.youreastbayhousevalue.com/'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.searchsanramonvalleyhomes.com/
-  VR_form: http://oi.vresp.com?fid=7c4789e0b7
-
+  second_CTA_URL: 'http://www.searchsanramonvalleyhomes.com/'
+  VR_form: 'http://oi.vresp.com?fid=7c4789e0b7'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your -- MARKET -- Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free -- MARKET -- Home Value Report"
-    CTA_url: http://www.youreastbayhousevalue.com/
-
+    CTA_title: What’s Your -- MARKET -- Home Worth?
+    CTA_text: >-
+      Are you thinking of selling your home or interested in learning about home
+      prices in your neighborhood? We can help you.
+    CTA_link_text: Free -- MARKET -- Home Value Report
+    CTA_url: 'http://www.youreastbayhousevalue.com/'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
-    CTA_link_text2: "Search the MLS"
-    CTA_url2: http://www.searchsanramonvalleyhomes.com/
-
+    CTA_title2: Looking for a -- MARKET -- Home?
+    CTA_text2: Search the entire MLS for your -- MARKET -- home.
+    CTA_link_text2: Search the MLS
+    CTA_url2: 'http://www.searchsanramonvalleyhomes.com/'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for real estate
-    advice. Whether you are a buyer, seller, or investor, our team of
+    Our mission at -- CLIENT BRAND -- is to be your best resource for real
+    estate advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/TheScottFullerTeam
-  linkedin_url: https://www.linkedin.com/pub/scott-r-fuller/7/41/854
-  gplus_url: https://plus.google.com/u/0/+ScottFullerteam
-  youtube_url: https://www.youtube.com/user/TheFullerGroupRE
+  facebook_url: 'https://www.facebook.com/TheScottFullerTeam'
+  linkedin_url: 'https://www.linkedin.com/pub/scott-r-fuller/7/41/854'
+  gplus_url: 'https://plus.google.com/u/0/+ScottFullerteam'
+  youtube_url: 'https://www.youtube.com/user/TheFullerGroupRE'
   twitter_url:
   instagram_url:
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/TheScottFullerTeam/
-  trulia_url: https://www.trulia.com/profile/scott-fuller-agent-danville-ca-zg8ll128/overview
-  yelp_url: http://www.yelp.com/biz/the-scott-fuller-team-keller-williams-realty-danville
-  podcast_url: https://itunes.apple.com/us/podcast/east-bay-real-estate-journal/id865680009?mt=2
-
+  zillow_url: 'https://www.zillow.com/profile/TheScottFullerTeam/'
+  trulia_url: >-
+    https://www.trulia.com/profile/scott-fuller-agent-danville-ca-zg8ll128/overview
+  yelp_url: >-
+    http://www.yelp.com/biz/the-scott-fuller-team-keller-williams-realty-danville
+  podcast_url: >-
+    https://itunes.apple.com/us/podcast/east-bay-real-estate-journal/id865680009?mt=2
 podcast:
   title: '-- MARKET -- Real Estate Podcast with -- CLIENT NAME --'
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the -- MARKET
+    -- Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+    -- MARKET -- Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
-  hero_logo_path: /img/logo.png
+  hero_logo_path: /uploads/logo-2.png
   logo_width_number: 60
-  hero_text: -- MARKET -- Real Estate Video Blog
-  hero_background_hex: '#999'
+  hero_text: '-- MARKET -- Real Estate Video Blog'
+  hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
   brand_color: '#b40101'
-  theme_color: '#999'
+  theme_color: '#999999'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: transparent
-
+  shadow_color: 'rgba(0, 0, 0, 0)'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
