--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -107,7 +107,7 @@ podcast:
   author: '-- CLIENT NAME --'
 images:
   client_headshot_path: /img/headshot.jpg
-  hero_logo_path: /uploads/logo.png
+  hero_logo_path: /images/logo.png
   logo_width_number: 60
   hero_text: '-- MARKET -- Real Estate Video Blog'
   hero_background_hex: '#999999'
