--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,11 @@
 audit_header: false
 title: -- CLIENT BRAND --
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-show_custom_links: true
+show_custom_links: false
 custom_links:
-  - title: Testimonials
-    url: /client-testimonials
+  - title: 
+    url: 
+
 client:
   name: Jonathan Carbutti
   license_number:
