--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -97,7 +97,7 @@ images:
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#13a89e'
+  brand_color: '#192d50'
   theme_color: '#192d50'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
