Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -71,7 +71,7 @@ socials:
   gplus_url: https://plus.google.com/b/115973343859057782159
   youtube_url: https://www.youtube.com/channel/UCvEpJF04Qn_1jtIFQJ7YFMg
   twitter_url: http://twitter.com/donaldsonteam
-  instagram_url:
+  instagram_url: https://www.instagram.com/thedonaldsonteam/
   pinterest_url:
   zillow_url: http://www.zillow.com/profile/Jody-Donaldson/
   trulia_url: http://www.trulia.com/profile/jody-d-donaldson-agent-chantilly-va-10873811/overview
