--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,109 +1,124 @@
 audit_header: false
 title: What's Working Now!
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Marjorie Dick Stuart
   license_number:
-  about_markdown: |
-    Marjorie Dick Stuart’s trademark is doing things a little differently than usual. Whether it’s having a pet lizard or making her own jewelry, she is a unique individual with interests that exemplify her one-of-a-kind take on life. As one of Cleveland Park’s top real estate professionals, Marjorie stays ahead of the pack by handling her clients’ important investments with innovative strategies and creative solutions.
+  about_markdown: >-
+    Marjorie Dick Stuart’s trademark is doing things a little differently than
+    usual. Whether it’s having a pet lizard or making her own jewelry, she is a
+    unique individual with interests that exemplify her one-of-a-kind take on
+    life. As one of Cleveland Park’s top real estate professionals, Marjorie
+    stays ahead of the pack by handling her clients’ important investments with
+    innovative strategies and creative solutions.
   market: Cleveland Park
-  brand: W.C. & A.N. Miller Realtors
+  brand:
   brokerage:
-  address: 4910 Massachusetts Ave NW, Ste 119 <br> Washington, DC 20016
+  address:
   phone: 240-731-8079
   phone_type:
   phone2:
   phone2_type:
-  email: marjorie@marjoriedickstuart.com
-  url: http://www.marjoriedickstuart.com
-
+  email: marketing@marjoriedickstuart.com
+  url: 'http://www.marjoriedickstuart.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.marjoriedickstuart.com/home-evaluation.php
+  first_CTA_URL: 'http://www.marjoriedickstuart.com/home-evaluation.php'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.marjoriedickstuart.com/home-finder.php
-  VR_form: http://oi.vresp.com?fid=29ea58349e
-
+  second_CTA_URL: 'http://www.marjoriedickstuart.com/home-finder.php'
+  VR_form: 'http://oi.vresp.com?fid=29ea58349e'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your -- MARKET -- Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free Home Value Report"
-    CTA_url: http://www.marjoriedickstuart.com/home-evaluation.php
-
+    CTA_title: What’s Your -- MARKET -- Home Worth?
+    CTA_text: >-
+      Are you thinking of selling your home or interested in learning about home
+      prices in your neighborhood? We can help you.
+    CTA_link_text: Free Home Value Report
+    CTA_url: 'http://www.marjoriedickstuart.com/home-evaluation.php'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
-    CTA_link_text2: "Find Your New Home"
-    CTA_url2: http://www.marjoriedickstuart.com/home-finder.php
-
+    CTA_title2: Looking for a -- MARKET -- Home?
+    CTA_text2: Search the entire MLS for your -- MARKET -- home.
+    CTA_link_text2: Find Your New Home
+    CTA_url2: 'http://www.marjoriedickstuart.com/home-finder.php'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    My mission is to be your best resource for real estate advice. Whether you are a buyer, seller, or investor, I can answer any questions you might have about real estate. Subscribe to this blog to get the latest news on local market trends and receive expert tips for buying or selling a home. Find out <strong>'What's Working Now!'</strong>
-
+    My mission is to be your best resource for real estate advice. Whether you
+    are a buyer, seller, or investor, I can answer any questions you might have
+    about real estate. Subscribe to this blog to get the latest news on local
+    market trends and receive expert tips for buying or selling a home. Find out
+    <strong>'What's Working Now!'</strong>
 socials:
   review_sm_icons: false
-  facebook_url: http://www.facebook.com/marjoriedickstuart
-  linkedin_url: https://www.linkedin.com/in/marjoriedickstuart
-  gplus_url: https://plus.google.com/109721335090332346830
-  youtube_url: https://www.youtube.com/channel/UCoyuWDEIG-HcgDzx_y5hqJw
-  twitter_url: https://twitter.com/MarjorieDickStu
+  facebook_url: 'http://www.facebook.com/marjoriedickstuart'
+  linkedin_url: 'https://www.linkedin.com/in/marjoriedickstuart'
+  gplus_url: 'https://plus.google.com/109721335090332346830'
+  youtube_url: 'https://www.youtube.com/channel/UCoyuWDEIG-HcgDzx_y5hqJw'
+  twitter_url: 'https://twitter.com/MarjorieDickStu'
   instagram_url:
   pinterest_url:
   zillow_url:
   trulia_url:
-  yelp_url: https://www.yelp.com/biz/marjorie-dick-stuart-washington
+  yelp_url: 'https://www.yelp.com/biz/marjorie-dick-stuart-washington'
   podcast_url:
-
 podcast:
   title: '-- MARKET -- Real Estate Podcast with -- CLIENT NAME --'
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the -- MARKET
+    -- Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+    -- MARKET -- Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 80
   hero_text:
-  hero_background_hex: '#999'
+  hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#981B1E'
-  theme_color: '#999'
+  brand_color: '#981b1e'
+  theme_color: '#999999'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: transparent
-
+  shadow_color: 'rgba(0, 0, 0, 0)'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
