--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,15 +19,15 @@ client:
     stays ahead of the pack by handling her clients’ important investments with
     innovative strategies and creative solutions.
   market: Cleveland Park
-  brand:
-  brokerage:
-  address:
-  phone: 240-731-8079
+  brand: 240-731-8079
+  brokerage: marketing@marjoriedickstuart.com
+  address: 'http://www.marjoriedickstuart.com'
+  phone: Christie’s International Real Estate
   phone_type:
   phone2:
   phone2_type:
-  email: marketing@marjoriedickstuart.com
-  url: 'http://www.marjoriedickstuart.com'
+  email: W.C. & A.N. Miller
+  url: 202.362.1300
 CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: 'http://www.marjoriedickstuart.com/home-evaluation.php'
