--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,15 +69,15 @@ welcome_box:
 
 socials:
   review_sm_icons: false
-  facebook_url:
+  facebook_url: https://www.facebook.com/focusrealestateteam
   linkedin_url:
-  gplus_url:
-  youtube_url:
-  twitter_url:
-  instagram_url:
+  gplus_url: https://plus.google.com/111696315013409971890
+  youtube_url: https://www.youtube.com/channel/UC6S4I0qy7eZZ_x_Dp-nV7bQ
+  twitter_url: https://twitter.com/JessReidCIRE
+  instagram_url: https://www.instagram.com/windyruffinifocusrealestate/
   pinterest_url:
-  zillow_url:
-  trulia_url:
+  zillow_url: https://www.zillow.com/profile/windyruffini/
+  trulia_url: 
   yelp_url:
   podcast_url:
 
