--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ client:
   name: Jonathan Carbutti
   license_number:
   about_markdown: |
-    We love Connecticut. And we're passionate about the real estate market here. We want to provide you with the best local content, and additional professional services, - if and when your situation requires it. Our goal is to be helpful, not a nuisance. There is no obligation required from you. We look forward to earning your trust and respect through our 'on-call' level of service and our extensive local knowledge.
+    Jonathan defines himself as an educator first, and real estate broker second. He enjoys educating the consumer, Buyers and Sellers alike, and dispelling many of the “myths” of buying and selling. As a successful real estate investor as well Jonathan is able to offer practical and useful advice whether you are the first-time investor or seasoned pro.
   market: New Haven & Fairfield County
   brand: Carbutti & Co Realtors
   brokerage:
