added bio and changes cta photos

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,9 @@ client:
   name: Ron Margolis
   license_number: RB-20918
   about_markdown: |
-
+    Ron & Gwen Margolis have been serving families in their home buying and selling on the island of Kauai for eleven years now. Listening to their clients and understanding their needs and priorities is a key to our success.
+    As an Accredited Buyers Representative, and a veteran listing agent on Kauai, Ron bring together many years of sales experience, marketing, and strong negotiating skills for Buyer and Seller Clients. Ron sits on the Board of Directors of the Kauai Board of Realtors and serves on the Government Affairs Committee, an active voice in supporting property owners rights on the island.
+    Gwen uses her artistic skills to help with staging of homes, writing on blogs and MLS listings, photography, and a deep caring for the satisfaction of each family and client.  With the ongoing inspiration and continuing of the Keller Williams culture, Ron & Gwen are constantly striving to enhance their standard care and expertise in their practice of real estate.
   market:
   brand: Margolis Team
   brokerage: Kauai Keller Williams
@@ -70,13 +72,13 @@ socials:
   linkedin_url: https://www.linkedin.com/in/kauairon/
   gplus_url: https://plus.google.com/u/0/b/106733431793488765719
   youtube_url: https://www.youtube.com/channel/UClMr8tCG_H8uBeoKYs4ZASQ
-  twitter_url: 
+  twitter_url:
   instagram_url:
   pinterest_url:
   zillow_url: https://www.zillow.com/profile/realtorronkauai/
   trulia_url: https://www.trulia.com/profile/ron-margolis-agent-lihue-hi-zg8k5zsl/overview
   yelp_url: https://www.yelp.com/biz/ron-margolis-keller-williams-lihue
-  podcast_url: 
+  podcast_url:
 
 podcast:
   title:
