--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ client:
   market: San Diego
   brand: American Mortgage Group
   brokerage:
-  address: 1419 University Ave <br>San Diego, CA 93103
+  address: 1419 University Ave, Suite C<br>San Diego, CA 92103
   phone: 619-948-2996
   phone_type:
   phone2:
@@ -87,7 +87,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: -- MARKET -- Mortgage Video Blog
+  hero_text: Abel Tejeda's Mortgage Video Blog
   hero_background_hex: '#999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
