Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,10 +10,7 @@ client:
   name: Windy Ruffini & Traci Farrell
   license_number: 01526913
   about_markdown: |
-    Energy, experience, integrity and the calm efficiency to complete transactions smoothly. Those are the hallmarks of a professional. A professional you want on your side.
-    Always FOCUSED on our clients, bringing hands on experience beyond the normal negotiation of real estate sales. Over the course of more than a decade of experience, and deals worth more than $20,000,000, we have acquired an extensive knowledge of real estate.
-    That breadth of knowledge spans both residential and commercial properties. We have been a principal in a variety of projects, including entitlement of vacant land, development of luxury residential neighborhoods, multi-family, rehab of existing structures, as well as the acquisition and re-positioning of distressed properties.
-    As an active real estate investor, we are frequent key note speakers on real estate. We constantly monitor rapidly changing market statistics. Local knowledge combined with proven strategies for marketing properties is our companies hallmark.
+    Energy, experience, integrity and the calm efficiency to complete transactions smoothly. Those are the hallmarks of a professional. A professional you want on your side. Always FOCUSED on our clients, bringing hands on experience beyond the normal negotiation of real estate sales. That breadth of knowledge spans both residential and commercial properties. We have been a principal in a variety of projects, including entitlement of vacant land, development of luxury residential neighborhoods, multi-family, rehab of existing structures, as well as the acquisition and re-positioning of distressed properties. As an active real estate investor, we are frequent key note speakers on real estate. We constantly monitor rapidly changing market statistics. Local knowledge combined with proven strategies for marketing properties is our companies hallmark.
   market:
   brand: Focus Real Estate Team
   brokerage: REmax Omega
