--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -92,7 +92,7 @@ podcast:
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
-  logo_width_number: 60
+  logo_width_number: 35
   hero_text: Central Florida & Orlando Real Estate Video Blog
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
@@ -108,7 +108,7 @@ header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: rgb(64, 65, 88)
+  shadow_color: transparent
 
 buttons:
   button_radius_number: 0
