Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -54,9 +54,9 @@ lender:
   logo_path:
   logo_path_2:
   name: '<b>Jeff Peer</b><br>NMLS 289958'
-  brand: Fidelity Mortgage
+  brand: USA Mortgage
   phone: 314-651-2558
-  email: JPeer@bosmtg.com
+  email: JPeer@USA-Mortgage.com
   url: 'http://www.palmerhousepropertiesstl.com/financing'
 socials:
   review_sm_icons: false
