--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -90,7 +90,7 @@ images:
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#D21F25'
+  brand_color: '#8DC73F'
   theme_color: '#D21F25'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
