Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -91,7 +91,7 @@ images:
   post_cover: /img/cover.jpg
 site_colors:
   brand_color: '#8DC73F'
-  theme_color: '#D21F25'
+  theme_color: '#262626'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
