--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,7 +52,7 @@ lender:
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at The Kevin Langan Team is to be your best resource for real estate
+    Our mission at BTG Real Estate is to be your best resource for real estate
     advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
