--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,54 +1,66 @@
 audit_header: false
-title: -- CLIENT BRAND --
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+title: '-- CLIENT BRAND --'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Kevin Langan
   license_number:
-  about_markdown: |
-      We understand that buying or selling a home is more than just a transaction. It’s a life-changing experience. That’s why our team of highly-seasoned real estate professionals is dedicated to providing exceptional, personalized service for all of our clients. We take great pride in the relationships we build and always work relentlessly on the client’s behalf to help them achieve their real estate goals.
-      Our team of experts represents the best and brightest in the industry, and we’re always striving to lead the field in research, innovation, and consumer education. Today’s buyers and sellers need a trusted resource that can guide them through the complex world of real estate. With our extensive knowledge and commitment to providing only the best and most timely information to our clients, we are your go-to source for real estate industry insight and advice.
+  about_markdown: >
+    We understand that buying or selling a home is more than just a transaction.
+    It’s a life-changing experience. That’s why our team of highly-seasoned real
+    estate professionals is dedicated to providing exceptional, personalized
+    service for all of our clients. We take great pride in the relationships we
+    build and always work relentlessly on the client’s behalf to help them
+    achieve their real estate goals.
+
+    Our team of experts represents the best and brightest in the industry, and
+    we’re always striving to lead the field in research, innovation, and
+    consumer education. Today’s buyers and sellers need a trusted resource that
+    can guide them through the complex world of real estate. With our extensive
+    knowledge and commitment to providing only the best and most timely
+    information to our clients, we are your go-to source for real estate
+    industry insight and advice.
   market:
   brand: BTG Real Estate
   brokerage: Keller Williams East Valley
-  address: 2077 E Warner Rd, Ste 110, Tempe, AZ 85284
+  address: '2077 E Warner Rd, Ste 110, Tempe, AZ 85284'
   phone: (480)-626-5034
   phone_type:
   phone2:
   phone2_type:
   email: inquiries@btgrealestate.com
   url: btgrealestate.com
-
 CTAs:
-  first_CTA_text: Join Us 
-  first_CTA_URL: https://www.discoverazhomesforsale.com/join-our-team/
+  first_CTA_text: Join Us
+  first_CTA_URL: 'http://www.btgrealestate.com/careers'
   second_CTA_text:
   second_CTA_URL:
-  VR_form: http://oi.vresp.com?fid=f217b02ad7
-
+  VR_form: 'http://oi.vresp.com?fid=f217b02ad7'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/006.jpg
-    CTA_title: "Join Us"
-    CTA_text: "Let's talk about how The Kevin Langan Team can build your Real Estate Career."
-    CTA_link_text: "Looking to Build Your Real Estate Career?"
-    CTA_url: https://www.discoverazhomesforsale.com/join-our-team/
-
+    CTA_title: Join Us
+    CTA_text: >-
+      Let's talk about how The Kevin Langan Team can build your Real Estate
+      Career.
+    CTA_link_text: Looking to Build Your Real Estate Career?
+    CTA_url: 'https://www.discoverazhomesforsale.com/join-our-team/'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -57,35 +69,46 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/turnkeyAZrealestate/?fref=ts
-  linkedin_url: https://www.linkedin.com/in/kevinlangan?authType=NAME_SEARCH&authToken=U6VH&locale=en_US&srchid=3830508351470235880696&srchindex=2&srchtotal=43&trk=vsrp_people_res_photo&trkInfo=VSRPsearchId%3A3830508351470235880696%2CVSRPtargetId%3A37680674%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH
-  gplus_url: https://plus.google.com/u/0/102660949522647945589/posts
-  youtube_url: https://www.youtube.com/channel/UC4RHcVIUNxLX2U2ciIgxDNg/featured
-  twitter_url: https://twitter.com/kevinLangan
+  facebook_url: 'https://www.facebook.com/turnkeyAZrealestate/?fref=ts'
+  linkedin_url: >-
+    https://www.linkedin.com/in/kevinlangan?authType=NAME_SEARCH&authToken=U6VH&locale=en_US&srchid=3830508351470235880696&srchindex=2&srchtotal=43&trk=vsrp_people_res_photo&trkInfo=VSRPsearchId%3A3830508351470235880696%2CVSRPtargetId%3A37680674%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH
+  gplus_url: 'https://plus.google.com/u/0/102660949522647945589/posts'
+  youtube_url: 'https://www.youtube.com/channel/UC4RHcVIUNxLX2U2ciIgxDNg/featured'
+  twitter_url: 'https://twitter.com/kevinLangan'
   instagram_url:
   pinterest_url:
-  zillow_url: http://www.zillow.com/profile/KevinLanganTeam/
-  trulia_url: http://www.trulia.com/profile/kevin-langan-agent-tempe-az-zgyjgh64/overview
-  yelp_url: http://www.yelp.com/biz/the-kevin-langan-team-keller-williams-east-valley-tempe
+  zillow_url: 'http://www.zillow.com/profile/KevinLanganTeam/'
+  trulia_url: 'http://www.trulia.com/profile/kevin-langan-agent-tempe-az-zgyjgh64/overview'
+  yelp_url: >-
+    http://www.yelp.com/biz/the-kevin-langan-team-keller-williams-east-valley-tempe
   podcast_url:
-
 podcast:
   title:
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Tempe Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Kevin Langan Team - your professional Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Tempe, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: 'Kevin Langan'
-
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the Tempe Area
+    Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from The Kevin Langan Team - your
+    professional Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in Tempe, home
+    selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
+  author: Kevin Langan
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: -- MARKET -- Real Estate Careers Video Blog
+  hero_text: '-- MARKET -- Real Estate Careers Video Blog'
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
@@ -95,13 +118,11 @@ site_colors:
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "#000"
-
+  shadow_color: '#000000'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
