Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,7 +49,7 @@ sidebar_CTA:
       Let's talk about how The Kevin Langan Team can build your Real Estate
       Career.
     CTA_link_text: Looking to Build Your Real Estate Career?
-    CTA_url: 'https://www.discoverazhomesforsale.com/join-our-team/'
+    CTA_url: 'http://www.btgrealestate.com/careers'
 lender:
   show_section: false
   header_text: Preferred Lender
