--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: '-- CLIENT BRAND --'
+title: 'BTG Real Estate'
 description: >-
   If you are looking to buy or sell a home, get all the information and the
   latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
