Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -35,7 +35,7 @@ client:
     advisor for Guardian’s clients.
   market:
   brand: 'The Betz Team | NMLS # 280613'
-  brokerage: 'Guardian Mortgage,<br>a Division of Sunflower Bank, N.A.'
+  brokerage: 'Guardian Mortgage,<br>a Division of Sunflower Bank, N.A. | NMLS #709491'
   address: '5910 North Central Expressway <br> Ste 725, Dallas, TX 75206'
   phone: 214-361-5626
   phone_type: Direct
