Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,7 +19,7 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: jccarr@sympatico.ca
+  email: rsmithcarr@icloud.com
   url: www.primetorontoneighbourhoods.com
 
 CTAs:
