--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://morrisonsellstruckee.blogspot.com/p/httpmorrisonsellstruckee.html
+  first_CTA_URL: /homevalue/
   second_CTA_text: Home Search
   second_CTA_URL: http://www.yourtahoetruckeerealestateexpert.com/
   VR_form: http://oi.vresp.com?fid=84d03510c0
@@ -34,7 +34,7 @@ sidebar_CTA:
     CTA_title: "What’s Your -- MARKET -- Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free Home Value Report"
-    CTA_url: http://morrisonsellstruckee.blogspot.com/p/httpmorrisonsellstruckee.html
+    CTA_url: /homevalue/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
