bolding site title

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -106,7 +106,7 @@ header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: transparent
+  shadow_color: rgba(234, 234, 234, .5)
 
 buttons:
   button_radius_number: 0
