adding slogan to header and about

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,6 +10,7 @@ client:
   name: Patrick Fitzgerald
   license_number: 'NMLS #3274'
   about_markdown: |
+    <h4 id="about-slogan">Number 1 Texas Home Loan Originator 7 Years in a Row</h4>
     I make my living helping Active Military people as well as Veterans. There are many ways in which to qualify to use this wonderful program. Too many people are misinformed about this program, and I am here to make sure that you are told the “straight facts”.
   market:
   brand: The VA Loan Guy
