--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 audit_header: false
 title: Salt Lake City Real Estate Video Blog with Joshua Stern
-description: 'Joshua Stern leads The Joshua Stern Team, a full-service real estate team that has helped sell and purchase thousands of Salt Lake City area homes since 2002. For the last few years, they have sold about a property a day! If you are looking to buy or sell a Utah home and would like to receive all of the latest market updates, tips, and tricks, make sure to follow The Stern Team, your best Salt Lake City area real estate agents.'
+description: 'The best Salt Lake City real estate agents are on The Stern Team. Follow our team to get all of the latest market updates, tips, and tricks.'
 show_custom_links: true
 custom_links:
   - title: About
