--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 audit_header: false
 title: Salt Lake City Real Estate Video Blog with Joshua Stern
-description: 'The best Salt Lake City real estate agents are on The Stern Team. Follow our team to get all of the latest market updates, tips, and tricks.'
+description: 'The best Salt Lake City real estate agents are on The Stern Team, led by Joshua Stern. Follow our team to learn the latest information from our market.'
 show_custom_links: true
 custom_links:
   - title: About
