Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -70,7 +70,7 @@ socials:
   facebook_url: https://www.facebook.com/TheEllisTeamProsperProps/
   linkedin_url: https://www.linkedin.com/in/karlyn-ellis-3093b424
   gplus_url: https://plus.google.com/102712706683570003304
-  youtube_url: https://www.youtube.com/user/ProsperProperties
+  youtube_url: https://www.youtube.com/channel/UCcusTtSskcA_0lLbVcVDQwg?view_as=public
   twitter_url: https://twitter.com/The_Ellis_Team
   instagram_url:
   pinterest_url:
