Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,114 +1,128 @@
 audit_header: false
-title: -- CLIENT BRAND --
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+title: '-- CLIENT BRAND --'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Karlyn Ellis
   license_number:
-  about_markdown: |
-    A Native Californian, Karlyn moved to Texas in 1994 and never looked back. In 1999, she began her career in real estate. After having worked for several different brokerages in town and gaining extensive knowledge of the industry, she decided it was time to start her own brokerage, and that is where Prosper Properties was born! Since its beginning in 2012, Prosper Properties has been a local stand out agency in Hays County, boasting over 30 real estate agents that specialize in the Buda, Kyle, San Marcos and Austin areas.  Karlyn and her team have the knowledge, the wisdom and the experience to get your home sold quickly and for maximum profit. Call her today, you will not be disappointed.
-
+  about_markdown: >
+    A Native Californian, Karlyn moved to Texas in 1994 and never looked back.
+    In 1999, she began her career in real estate. After having worked for
+    several different brokerages in town and gaining extensive knowledge of the
+    industry, she decided it was time to start her own brokerage, and that is
+    where Prosper Properties was born! Since its beginning in 2012, Prosper
+    Properties has been a local stand out agency in Hays County, boasting over
+    30 real estate agents that specialize in the Buda, Kyle, San Marcos and
+    Austin areas.  Karlyn and her team have the knowledge, the wisdom and the
+    experience to get your home sold quickly and for maximum profit. Call her
+    today, you will not be disappointed.
   market: Buda
   brand: Prosper Properties Realty Services
   brokerage:
-  address: 305 Railroad Street, Ste A <br> Buda, TX 78610
+  address: '305 Railroad Street, Ste A <br> Buda, TX 78610'
   phone: (512) 658-6476
   phone_type:
   phone2:
   phone2_type:
   email: karlyn@prosperprops.com
-  url: http://www.prosperprops.com
-
+  url: 'http://www.prosperprops.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.BudaKyleHomeValues.com
+  first_CTA_URL: 'http://www.BudaKyleHomeValues.com'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.prosperprops.com/?utm_source=vyral-newsletter&utm_medium=email
+  second_CTA_URL: 'http://www.prosperprops.com/?utm_source=vyral-newsletter&utm_medium=email'
   VR_form:
-
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/001.jpg
-    CTA_title: "What’s Your -- MARKET -- Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free -- MARKET -- Home Value Report"
-    CTA_url: http://www.BudaKyleHomeValues.com
-
+    CTA_title: What’s Your -- MARKET -- Home Worth?
+    CTA_text: >-
+      Are you thinking of selling your home or interested in learning about home
+      prices in your neighborhood? We can help you.
+    CTA_link_text: Free -- MARKET -- Home Value Report
+    CTA_url: 'http://www.BudaKyleHomeValues.com'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
-    CTA_link_text2: "Search the MLS"
-    CTA_url2: http://www.prosperprops.com/?utm_source=vyral-newsletter&utm_medium=email
-
+    CTA_title2: Looking for a -- MARKET -- Home?
+    CTA_text2: Search the entire MLS for your -- MARKET -- home.
+    CTA_link_text2: Search the MLS
+    CTA_url2: 'http://www.prosperprops.com/?utm_source=vyral-newsletter&utm_medium=email'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for real estate
-    advice. Whether you are a buyer, seller, or investor, our team of
+    Our mission at -- CLIENT BRAND -- is to be your best resource for real
+    estate advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/TheEllisTeamProsperProps/
-  linkedin_url: https://www.linkedin.com/in/karlyn-ellis-3093b424
-  gplus_url: https://plus.google.com/102712706683570003304
-  youtube_url: https://www.youtube.com/channel/UCcusTtSskcA_0lLbVcVDQwg?view_as=public
-  twitter_url: https://twitter.com/The_Ellis_Team
+  facebook_url: 'https://www.facebook.com/TheEllisTeamProsperProps/'
+  linkedin_url: 'https://www.linkedin.com/in/karlyn-ellis-3093b424'
+  gplus_url: 'https://plus.google.com/102712706683570003304'
+  youtube_url: 'https://www.youtube.com/channel/UCcusTtSskcA_0lLbVcVDQwg?view_as=public'
+  twitter_url: 'https://twitter.com/The_Ellis_Team'
   instagram_url:
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/karlyn55/#reviews
+  zillow_url: 'https://www.zillow.com/profile/karlyn55/#reviews'
   trulia_url:
-  yelp_url: https://www.yelp.com/biz/prosper-properties-buda
+  yelp_url: 'https://www.yelp.com/biz/prosper-properties-buda'
   podcast_url:
-
 podcast:
   title: '-- MARKET -- Real Estate Podcast with -- CLIENT NAME --'
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the -- MARKET
+    -- Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+    -- MARKET -- Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 60
-  hero_text: -- MARKET -- Real Estate Video Blog
-  hero_background_hex: '#999'
+  hero_text: '-- MARKET -- Real Estate Video Blog'
+  hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#4389A2'
-  theme_color: '#1A0C04'
-  theme_text_color: '#5d9bd3'
+  brand_color: '#056666'
+  theme_color: '#1a0c04'
+  theme_text_color: '#4389a2'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: transparent
-
+  shadow_color: 'rgba(0, 0, 0, 0)'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
