--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,10 @@
 audit_header: false
 title: -- CLIENT BRAND --
 description: 'Patrick Fitzgerald, the VA Loan Guy, is located in San Antonio, Texas and is a true “One Stop Lender”. We originate, underwrite, and close all types of loans. We offer Texas Vet, Veterans, FHA, Conventional, Jumbo, Adjustable Rate, and Investment products.'
-show_custom_links: false
+show_custom_links: true
 custom_links:
-  - title:
-    url:
+  - title: TV Spots
+    url: /tv-spots/
 
 client:
   name: Patrick Fitzgerald
