Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 audit_header: false
 title: Salt Lake City Real Estate Video Blog with Joshua Stern
-description: 'The best Salt Lake City real estate agents are on The Stern Team, led by Joshua Stern. Follow our team to learn the latest information from our market.'
+description: 'Salt Lake City Utah best Realtors are on The Stern Team, led by Joshua Stern. Follow us for latest market info and be prepared to buy or sell real estate.'
 show_custom_links: true
 custom_links:
   - title: About
