Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -72,7 +72,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/Brent-Dildine/
   trulia_url: https://www.trulia.com/profile/brent-dildine-agent-boise-id-zgkx1fq0/overview
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/boise-real-estate-podcast-with-brent-dildine/id1274148125?mt=2
 
 podcast:
   title: Boise Real Estate Podcast with Brent Dildine
