--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -79,7 +79,7 @@ socials:
 podcast:
   title: '-- MARKET -- Real Estate Podcast with -- CLIENT NAME --'
   categories: Education
-  image: /img/podcast.jpg
+  image: /img/podcast.png
   subtitle: 'Get the answers to the most popular questions for you and to get the necessary tools to make a proper decision on a Home Loan using the Texas Veterans Land Board Program.'
   description: 'Patrick Fitzgerald, the VA Loan Guy, is located in San Antonio, Texas and is a true “One Stop Lender”. We originate, underwrite, and close all types of loans. We offer Texas Vet, Veterans, FHA, Conventional, Jumbo, Adjustable Rate, and Investment products.'
   keywords: 'Texas Veteran Loans, VA Loans, The VA Loan Guy, Loans for Active Military, Mortgage Banking Firm, Mortgage Banking in Texas, VA Mortgages'
