edits per client

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,7 +20,7 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: jschuster@gmail.com
+  email: john@johnschustergroup.com
   url: http://johnschustergroup.com
 
 CTAs:
