Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -81,7 +81,7 @@ socials:
   zillow_url: http://www.zillow.com/profile/DavidTheon/
   trulia_url: http://www.trulia.com/profile/david-t-robinson-broker-orem-ut-8292480/
   yelp_url: http://www.yelp.com/biz/david-t-robinson-real-estate-team-orem
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/utah-real-estate-podcast-with-david-robinson/id1280558665?mt=2
 
 podcast:
   title: Utah Real Estate Podcast with David Robinson
