--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -74,7 +74,7 @@ socials:
   zillow_url:
   trulia_url:
   yelp_url: https://www.yelp.com/user_details?userid=TKd6cBb_EnVAS5eooUUMGg
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/real-estate-podcast-with-patrick-fitzgerald/id1216865123?mt=2
 
 podcast:
   title: '-- MARKET -- Real Estate Podcast with -- CLIENT NAME --'
